force-app/main/default/objects/Vehicle__c/fields/CarBrand__c.field-meta.xml
<CustomField>
    <fullName>CarBrand__c</fullName>
    <label>Car Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maruti Suziki</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>