force-app/main/default/objects/Vehicle__c/fields/CarModel__c.field-meta.xml
<CustomField>
    <fullName>CarModel__c</fullName>
    <label>Car Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dzire</fullName>
            </value>
            <value>
                <fullName>Ertiga</fullName>
            </value>
            <value>
                <fullName>Swift</fullName>
            </value>
            <value>
                <fullName>Verito</fullName>
            </value>
            <value>
                <fullName>Xylo</fullName>
            </value>
            <value>
                <fullName>Etios</fullName>
            </value>
            <value>
                <fullName>Innova</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>