force-app/main/default/objects/Vehicle__c/fields/KilometersDriven__c.field-meta.xml
<CustomField>
    <fullName>KilometersDriven__c</fullName>
    <label>Kilometers Driven</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>