force-app/main/default/objects/Vehicle__c/fields/SeatingCapacity__c.field-meta.xml
<CustomField>
    <fullName>SeatingCapacity__c</fullName>
    <label>Seating Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>