force-app/main/default/objects/Vehicle__c/fields/TestRelated__c.field-meta.xml
<CustomField>
    <fullName>TestRelated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Am testing related list how it is getting displayed</description>
    <label>TestRelated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>