force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CarBrand__c</columns>
    <columns>CarModel__c</columns>
    <columns>CarStyle__c</columns>
    <columns>SeatingCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>